force-app/main/default/objects/Data_Snapshot__c/Data_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Data Snapshot</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Data Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>