force-app/main/default/objects/Data_Snapshot__c/fields/Converted_Leads__c.field-meta.xml
<CustomField>
    <fullName>Converted_Leads__c</fullName>
    <label>Converted Leads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>