force-app/main/default/objects/Data_Snapshot__c/fields/Leads_in_Priorisiert__c.field-meta.xml
<CustomField>
    <fullName>Leads_in_Priorisiert__c</fullName>
    <label>Leads in Priorisiert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>