force-app/main/default/objects/Data_Snapshot__c/fields/New_Leads__c.field-meta.xml
<CustomField>
    <fullName>New_Leads__c</fullName>
    <label>New Leads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>