force-app/main/default/objects/Data_Snapshot__c/fields/Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Opps__c</fullName>
    <label>Open Opps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>