force-app/main/default/objects/Data_Snapshot__c/fields/Open_Scoping_Volume__c.field-meta.xml
<CustomField>
    <fullName>Open_Scoping_Volume__c</fullName>
    <label>Open Scoping Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>