force-app/main/default/objects/Data_Snapshot__c/fields/Opps_in_Scoping__c.field-meta.xml
<CustomField>
    <fullName>Opps_in_Scoping__c</fullName>
    <label>Opps in Scoping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>