force-app/main/default/objects/Data_Snapshot__c/fields/Total_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast__c</fullName>
    <label>Total Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>