force-app/main/default/objects/Data_Snapshot__c/fields/User_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>User_Snapshot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Snapshot</label>
    <type>Checkbox</type>
</CustomField>