force-app/main/default/objects/Data_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>User_Snapshot__c</columns>
    <columns>Type__c</columns>
    <columns>Open_Opps__c</columns>
    <columns>Total_Pipeline__c</columns>
    <columns>Snapshot_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>